# sdl2-demos

./: LICENSE
01_MacOSX/: CMakeLists.txt
02_iOS/: CMakeLists.txt  README
02_iOS/include/myapp/: myapp.hpp
02_iOS/src/: main.cpp
05_SimpleLib/: CMakeLists.txt
05_SimpleLib/gfxlib/src/: CMakeLists.txt  GFXLib.cpp
05_SimpleLib/jollyroger/src/: CMakeLists.txt  main.cpp
06_Linux/: CMakeLists.txt  main.cpp
07_MSVC/: CMakeLists.txt  README
08_MinGW/: CMakeLists.txt  README  main.cpp
09_AndroidBasic/: README  androidbuild.sh  build.sh
10_AndroidDefault/: App.cpp  README
10_AndroidDefault/res/layout/: main.xml
10_AndroidDefault/res/values/: strings.xml
11_AndroidCMake/: CMakeLists.txt  README  init.sh
11_AndroidCMake/android-project/: AndroidManifest.xml
11_AndroidCMake/src/: App.cpp  SDLTest.java  hello-cmake.cpp
12_CrossBuild/: CMakeLists.txt  README  SDLTest.java  init.sh
12_CrossBuild/gfxlib/include/: GFXLib.h
12_CrossBuild/gfxlib/src/: CMakeLists.txt  GFXLib.cpp
13_HelloWorld/demo/src/: main.cpp
13_HelloWorld/gfxlib/include/: GFXLib.h
13_HelloWorld/gfxlib/src/: CMakeLists.txt  GFXLib.cpp
14_BlitImage/: CMakeLists.txt  README
14_BlitImage/demo/src/: CMakeLists.txt  main.cpp
14_BlitImage/gfxlib/include/: Error.h  GFXLib.h
14_BlitImage/gfxlib/src/: CMakeLists.txt  Error.cpp  GFXLib.cpp
15_TextureRendering/: CMakeLists.txt  README  init_android.sh  ios.sh
15_TextureRendering/demo/src/: CMakeLists.txt  main.cpp
15_TextureRendering/gfxlib/include/: GFXLib.h  Image.h
15_TextureRendering/gfxlib/src/: CMakeLists.txt  GFXLib.cpp  Image.cpp
16_TrueTypeFonts/: CMakeLists.txt  README  SDLTest.java  TODO  init_android.sh  osxrun.sh  show.sh
16_TrueTypeFonts/demo/src/: CMakeLists.txt  main.cpp
16_TrueTypeFonts/gfxlib/include/: Error.h  Fonts.h  GFXLib.h  Image.h
16_TrueTypeFonts/gfxlib/src/: CMakeLists.txt  Fonts.cpp  Image.cpp
17_CodeBase/: CMakeLists.txt  main.cpp
17_CodeBase/cmake/: cygwin.cmake  linux.cmake  macosx.cmake  mingw.cmake
18_Extensions/: CMakeLists.txt  SDLTest.java  main.cpp
18_Extensions/cmake/: android.cmake  cygwin.cmake  ios.cmake  linux.cmake  macosx.cmake  mingw.cmake  msvc.cmake  resources.cmake
19_OpenGL/: CMakeLists.txt  README  SDLTest.java  main.cpp
19_OpenGL/cmake/: android.cmake  ios.cmake  linux.cmake  macosx.cmake  msvc.cmake  resources.cmake
Resources/android-project/: project_create.sh
Resources/android-project/src/org/libsdl/app/: SDLActivity.java
Resources/scripts/: android-toolchain.sh  build_sdl2-android.sh  build_sdl2-ios.sh  clean-android.sh  create_android.sh  create_ios.sh  create_linux.sh  create_macosx.sh  get_android-cmake.sh  get_sdl2.sh  get_sdl2_image.sh  get_sdl2_mixer.sh  get_sdl2_ttf.sh  init_android.sh  ios-cmake.sh  ios_sim.sh  linuxrun.sh  mingwrun.sh  msvcrun.sh  setup_android.sh  setup_cygwin.sh
Resources/share/: Mitch.icns  fragmentshader.glsl  vertexshader.glsl
